# GeoRegression

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
Examples/: GWR_fit.py  STRF_fit.py  STST_fit.py  data_import.py  local_importance.py  predict.py  spatiotemporal.py  stale.py
georegression/: __init__.py  ale_utils.py  distance_utils.py  gtwrf.py  kernel.py  local_ale.py  local_pd.py  neighbour_utils.py  numba_impl.py  spatial_temporal_moran.py  stacking_model.py  weight_matrix.py  weight_model.py
georegression/simulation/: parameter_tuning.py  simulation.py  simulation_data_fitting.py  simulation_for_STST_variation.py  simulation_for_ale.py  simulation_for_data_size.py  simulation_for_fitting.py  simulation_for_importance.py  simulation_for_robust.py  simulation_utils.py
georegression/test/data/: TOD_weekend.csv  TOD_workday.csv  __init__.py  simulation.py  simulation_utils.py
georegression/test/efficiency/: distance_matrix_dask.py  distance_matrix_sort.py  numba_inverse.py  numba_stack.py  regression_numba.py  second_neighbor_numba.py  second_neighbour_sparse.py  sklearn_intel.py  sparse_compatibility.py  sparse_numba_compatibility.py  sparse_operation.py  test_dask_for_distance_matrix.py  test_distance_matrix.py  test_dpnp.py  test_indicator.py  test_numba_linear_regression.py  test_numba_list.py  test_parallel_regression.py  test_regression.py  test_sparse_demo.py  test_sparse_matrix.py  test_sparse_numba_impl.py  test_tree.py  tree_fit_predict.py  (+1 more)
georegression/visualize/: __init__.py  ale.py  importance.py  pd.py  scatter.py  utils.py
(+30 files in other folders)
