[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "georegression"
version = "0.0.1"
authors = [
    { name = "PiaoYang", email = "piaoyang1999@gmail.com" },
]
description = "georegression"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "scikit-learn",
    "xgboost",
    "pandas",
    "slab_utils",
    "matplotlib",
    "umap-learn",
    "hdbscan",
    "plotly",
    "numpy",
    "scipy",
    "joblib",
    "numba"
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"